@@ -4048,3 +4048,5 @@ Changelog for GXemul:
 		runstates. (Also making the icons smaller by not showing text
 		labels, and enabling tooltips instead. Looks/feels nicer.)
 		Implementing an undoable ResetAction.
+20080416	GUI updates: Fixed-width font in the debug console, and it
+		now scrolls to bottom on text output.
